# omikuji

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  clippy.toml  codecov.yml  config-anvil.yaml  config-example-with-database.yaml  config.yaml  coverage.info  docker-compose.yaml  example.env  example_config.yaml  supabase_drop_tables.sql  supabase_setup.sql
.cargo/: config.toml
.claude/commands/: commit.md  createpr.md  dry_code.md  issues.md  open-issues.md  product-brief.md  read.md
.githooks/: README.md  pre-commit  setup.sh
.github/workflows/: ci.yml  claude.yml  coverage.yml  docker.yml  release.yml
ai_docs/: feed-value-retrieval.md  flux-interface-docs.md  tokio.md
config/: scheduled_tasks_example.yaml
docs/: README.md  building-blocks.md  debug-logging.md  gas-configuration.md  gas-monitoring.md
docs/archive/: REORGANIZATION_SUMMARY.md
docs/archive/issues/: issue-34-template-system.md  issue-35-import-export.md
docs/configuration/: key-storage.md
docs/database/: supabase-setup.md
docs/development/: contributing.md  git-hooks.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: database-setup.md  docker-setup.md  prometheus-metrics.md  scheduled-tasks.md
docs/issues/: issue-32-cli-config-management-simplified.md  issue-33-validation-testing.md
docs/monitoring/: key-storage-monitoring.md
docs/reference/: architecture.md  configuration.md  contracts.md  metrics.md
docs/reference/libraries/: README.md  alloy-rs-documentation.md  reqwest.md  serde.md  sqlx.md  tracing.md
examples/: config-with-gas-prices.yaml  event_monitor_builder.rs  event_monitors_example.yaml  grafana-dashboard.json
migrations/: 20240101000001_create_feed_log_table.sql  20240119000001_create_transaction_log_table.sql  20240622000001_create_gas_price_tables.sql
postgres-init/: 01-optimize-for-timeseries.sql
scripts/: lint.sh
specs/: chainlink-contract-support.md  configuration.md  retrieve-feed-value
src/: cli.rs  constants.rs  error.rs  error_context.rs  error_handlers.rs  lib.rs  main.rs  welcome_screen.rs
src/config/: builders.rs  metrics_config.rs  mod.rs  models.rs  parser.rs
src/config/tests/: mod.rs
src/contracts/: abi_utils.rs  caller.rs  flux_aggregator.rs  flux_aggregator_v2.rs  generic_caller.rs  interaction.rs  mod.rs  tests.rs
src/database/: cleanup.rs  connection.rs  feed_log_repository.rs  mod.rs  models.rs  repository.rs  tests.rs  transaction_repository.rs
src/datafeed/: contract_config.rs  contract_updater.rs  contract_utils.rs  fetcher.rs  json_extractor.rs  manager.rs  mod.rs  monitor.rs  tests.rs
src/event_monitors/: abi_decoder.rs  builder.rs  config.rs  error.rs  listener.rs  metrics.rs  mod.rs  models.rs  response_handler.rs  webhook_caller.rs
src/gas/: estimator.rs  mod.rs  tests.rs  transaction_builder.rs  utils.rs
src/gas_price/: cache.rs  manager.rs  mod.rs  models.rs  tests.rs
src/gas_price/providers/: coingecko.rs  mod.rs
src/metrics/: alert_metrics.rs  config_manager.rs  config_metrics.rs  contract_metrics.rs  datasource_metrics.rs  economic_metrics.rs  factory.rs  feed_metrics.rs  gas_metrics.rs  mod.rs  network_metrics.rs  performance_metrics.rs  quality_metrics.rs  recorder.rs  server.rs  update_metrics.rs
src/network/: mod.rs  provider.rs  provider_v2.rs  tests.rs
src/scheduled_tasks/: condition_checker.rs  condition_checker_v2.rs  executor.rs  manager.rs  mod.rs  models.rs
src/test_utils/: assertions.rs  builders.rs  edge_cases.rs  examples.rs  factories.rs  mocks.rs  mod.rs
src/tui/: db_metrics.rs  metrics.rs  mod.rs  update.rs
src/ui/: mod.rs  welcome_screen.rs
src/utils/: mod.rs  tests.rs  transaction_handler.rs  tx_logger.rs
src/wallet/: balance_monitor.rs  mod.rs
src/wallet/key_storage/: aws_secrets.rs  aws_secrets_tests.rs  env.rs  keyring.rs  mod.rs  tests.rs  vault.rs  (+1 more)
tests/: event_monitors_integration.rs  gas_price_integration.rs  scheduled_tasks_integration.rs
(+4 files in other folders)
