[package]
name = "omikuji"
version = "0.1.0"
edition = "2021"
authors = ["Ijonas Kisselbach <ijonas.kisselbach@gmail.com>"]
description = "A lightweight EVM blockchain datafeed provider daemon"
repository = "https://github.com/ijonas/omikuji"
license = "MIT"

[dependencies]
# Configuration and CLI
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
dirs = "5.0"
dotenv = "0.15"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Ethereum interaction
ethers = { version = "2.0", features = ["abigen", "ws", "rustls"] }
ethers-contract = "2.0"
ethers-providers = "2.0"
ethers-core = "2.0"

# HTTP client for external data
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"

# Metrics
prometheus = "0.13"
prometheus-hyper = "0.1"
hyper = { version = "1.0", features = ["server", "http1"] }

# Retry mechanisms
backoff = "0.4"
jsonpath-rust = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }

# Cron scheduling
cron = "0.12"
tokio-cron-scheduler = "0.9"

[dev-dependencies]
tempfile = "3.9"
rand = "0.8"
mockito = "1.2"
